--- a/creador.html
+++ b/creador.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Creador de Tiendas – Mates Guay</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
 
   <style>
@@ -76,6 +76,28 @@
       grid-template-columns: 1fr 1fr;
       gap: 10px;
     }
+
+    form {
+  display: grid;
+  gap: 16px;
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+@media (max-width: 600px) {
+  form {
+    padding: 14px;
+    box-shadow: none;
+  }
+  input, select, button {
+    font-size: 16px;
+  }
+}
+
     
 
   </style>
@@ -410,6 +432,7 @@ if (file) {
   });
 
   actualizarVistaPrevia();
+  
 </script>
 </body>
 </html>
