--- a/index-landing.html
+++ b/index-landing.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <title>MultiTiendas Gualeguay — Digitalizamos tu negocio en minutos</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Tienda online lista en minutos. Catálogo, QR y pedidos por WhatsApp. MultiTiendas Gualeguay." />
-  <link rel="icon" href="imag/LOGO-ADMINISTRADOR.png" />
+  <link rel="icon" href="imag/LOGO-LADINGPAGE.jpeg" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     :root{
@@ -36,14 +36,34 @@
     footer{margin-top:40px;background:#0f172a;color:#cbd5e1}
     .fwrap{max-width:1100px;margin:auto;padding:24px 16px;display:flex;justify-content:space-between;align-items:center}
     @media(max-width:900px){.hero{grid-template-columns:1fr}}
+    @media (max-width: 600px) {
+  .hero {
+    text-align: center;
+    padding: 10px;
+  }
+  h1 {
+    font-size: 28px;
+  }
+  .cards {
+    grid-template-columns: 1fr;
+  }
+  .plan {
+    padding: 14px;
+  }
+  .fwrap {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
   </style>
 </head>
 <body>
   <header>
     <nav>
       <div style="display:flex;align-items:center;gap:10px">
-        <img src="imag/LOGO-ADMINISTRADOR.png" alt="Logo" height="34" />
-        <strong>MultiTiendas Gualeguay</strong>
+        <img src="imag/LOGO-LADINGPAGE.jpeg" alt="Logo" height="34" />
+        <strong>Vidriera Virtual</strong>
       </div>
       <div>
         <a href="#planes">Planes</a>
@@ -69,7 +89,7 @@
       </div>
     </div>
     <div>
-      <img src="imag/LOGO-ADMINISTRADOR.png" alt="Vista previa" style="width:100%;border-radius:16px;box-shadow:0 12px 40px rgba(0,0,0,.18)">
+      <img src="imag/LOGO-LADINGPAGE.jpeg" alt="Vista previa" style="width:100%;border-radius:16px;box-shadow:0 12px 40px rgba(0,0,0,.18)">
     </div>
   </section>
 
