--- a/admin.html
+++ b/admin.html
@@ -33,17 +33,32 @@
   <!-- Panel oculto hasta que se loguee -->
   <div id="admin-panel">
     <div style="text-align: center; margin-top: 20px;">
-      <input type="text" id="buscador-admin" placeholder="Buscar productos..."
-        style="width: 50%; padding: 10px; font-size: 16px;">
+      <input type="text" id="buscador-admin" placeholder="Buscar productos...">
+
     </div>
 
     <h1>Panel de Administración de Productos</h1>
 
-    <div id="acciones">
-      <button onclick="agregarProducto()">➕ Agregar Producto</button>
-      <button onclick="guardarProductos()">💾 Guardar Cambios</button>
-      <button onclick="cerrarSesion()" style="background-color: darkred; color: white;">🔒 Cerrar sesión</button>
-    </div>
+    <div id="acciones" style="display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin-top:20px;">
+  <button 
+    onclick="agregarProducto()" 
+    style="background:#0b5ed7; color:white; border:none; padding:10px 18px; border-radius:8px; cursor:pointer; font-size:15px; font-weight:600; transition:all 0.3s ease;">
+    ➕ Agregar Producto
+  </button>
+
+  <button 
+    onclick="guardarProductos()" 
+    style="background:#198754; color:white; border:none; padding:10px 18px; border-radius:8px; cursor:pointer; font-size:15px; font-weight:600; transition:all 0.3s ease;">
+    💾 Guardar Cambios
+  </button>
+
+  <button 
+    onclick="cerrarSesion()" 
+    style="background:#dc3545; color:white; border:none; padding:10px 18px; border-radius:8px; cursor:pointer; font-size:15px; font-weight:600; transition:all 0.3s ease;">
+    🔒 Cerrar sesión
+  </button>
+</div>
+
     
     <div id="dashboard">
   <div class="card">
@@ -102,11 +117,20 @@
   <p style="color:#555;">Agregá, eliminá o renombrá las categorías según tus productos haciendo doble click:</p>
 
   <div id="lista-categorias" style="display:flex; flex-wrap:wrap; gap:10px; margin-bottom:15px;"></div>
+<div style="display:flex; flex-wrap:wrap; gap:8px; align-items:center;">
+  <input 
+    type="text" 
+    id="nuevaCategoria" 
+    placeholder="Nueva categoría..." 
+    style="flex:1; min-width:180px; padding:10px; border:1px solid #ccc; border-radius:8px; font-size:15px;">
+  
+  <button 
+    id="btnAgregarCategoria" 
+    style="background:#0b5ed7; color:white; border:none; padding:8px 12px; border-radius:8px; font-weight:600; cursor:pointer; font-size:14px; white-space:nowrap;">
+    ➕ Agregar
+  </button>
+</div>
 
-  <div style="display:flex; gap:10px; align-items:center;">
-    <input type="text" id="nuevaCategoria" placeholder="Nueva categoría..." style="flex:1; padding:8px; border:1px solid #ccc; border-radius:6px;">
-    <button id="btnAgregarCategoria" style="background:#0b5ed7; color:white; border:none; padding:8px 14px; border-radius:6px; cursor:pointer;">Agregar</button>
-  </div>
 </section>
 
 <!-- ✅ Mensaje de confirmación animado -->
@@ -145,6 +169,7 @@
       <tbody></tbody>
     </table>
   </div>
+   <div id="paginacion" style="text-align:center; margin-top:20px;"></div>
   <hr style="margin:30px 0;">
 </div>
   
@@ -222,7 +247,7 @@
 
 
 
-  <div id="paginacion" style="text-align:center; margin-top:20px;"></div>
+ 
 
 <script type="module" src="js/admin.js"></script>
 <script src="js/login.js"></script>
