--- a/admin.html
+++ b/admin.html
@@ -152,18 +152,18 @@
 <div class="tabla-contenedor">                
     <table id="tabla-productos">
       <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Precio</th>
-          <th>Precio Anterior</th>
-          <th>% Descuento</th>
-          <th>Precio<br>Mayorista</th>
-          <th>Unidades<br>por Pack</th>
-          <th>Categoria</th>
-          <th>tipo de venta</th>
-          <th>Imagen (URL)</th>          
-          <th>Acciones</th>
-          <th>Stock</th>
+        <th>Nombre</th>
+    <th>Precio</th>
+    <th>Precio Anterior</th>
+    <th>% Descuento</th>
+    <th>Precio Mayorista</th>
+    <th>Unidades por Pack</th>
+    <th>Categoría</th>
+    <th>Cantidad</th>
+    <th>Tipo de venta</th>
+    <th>Imagen (URL)</th>
+    <th>Acciones</th>
+    <th>Stock</th>
         </tr>
       </thead>
       <tbody></tbody>
