arreglo en carrito importacion de folletos categoria de botones

--- a/index-landing.html
+++ b/index-landing.html
@@ -392,6 +392,13 @@
     </div>
   </section>
 
+  <section id="ejemplos" class="precios">
+    <h2>Tiendas activas en la plataforma</h2>
+    <div id="grid-tiendas" class="grid-tiendas">
+      <!-- Se llena dinámicamente -->
+    </div>
+  </section>
+
   <section id="planes" class="precios">
     <h2>Planes y precios</h2>
     <div class="planes">
@@ -404,6 +411,14 @@
           <li>QR descargable</li>
           <li>Pedidos por WhatsApp</li>
           <li>Capacitación en carga de productos</li>
+        </ul>
+        <ul class="tachado" style="text-decoration: line-through;">
+          <li>Configuración logo y colores</li>
+          <li>Estadísticas</li>
+          <li>Soporte prioritario</li>
+          <li>Difusión Orgánica y en RRSS</li>
+          <li>Registro de ventas</li>
+          <li>Registro de clientes y Proveedores</li>
         </ul>
         <a class="btn" href="https://wa.me/5492644429649?text=Hola!%20Quiero%20el%20Plan%20B%C3%A1sico">Elegir
           Básico</a>
@@ -422,6 +437,10 @@
           <li>Soporte prioritario</li>
           <li>Difusion Orgánica y en RRSS</li>
         </ul>
+         <ul class="tachado" style="text-decoration: line-through;">
+          <li>Registro de ventas</li>
+          <li>Registro de clientes y Proveedores</li>
+        </ul>
         <a class="btn" href="https://wa.me/5492644429649?text=Hola!%20Quiero%20el%20Plan%20Profesional">Elegir
           Profesional</a>
       </div>
@@ -437,22 +456,16 @@
           <li>Configuracion logo y colores</li>
           <li>Estadísticas</li>
           <li>Soporte prioritario</li>
-         <li>Difusion Orgánica y en RRSS</li>
+          <li>Difusion Orgánica y en RRSS</li>
           <li>Registro de ventas</li>
           <li>Registro de clientes y Proveedores</li>
-
         </ul>
         <a class="btn" href="https://wa.me/5492644429649?text=Hola!%20Quiero%20el%20Plan%20Premium">Elegir Premium</a>
       </div>
     </div>
   </section>
 
-  <section id="ejemplos" class="precios">
-    <h2>Tiendas activas en la plataforma</h2>
-    <div id="grid-tiendas" class="grid-tiendas">
-      <!-- Se llena dinámicamente -->
-    </div>
-  </section>
+  
 
   <footer>
     <div class="fwrap">
